passaportes/Passports/src/Passport/PassportParser.java
// Generated from /home/chalkos/MEI/PLC-TP/DBEmigration_PLC/passaportes/Passports/src/Passport/Passport.g4 by ANTLR 4.4.1-dev
package Passport;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PassportParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4.1-dev", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROCESS=1, YEAR=2, PROCESS_NUMBER=3, CITY_COUNCIL=4, PERSON=5, NAME=6, 
		IDENT_CARD=7, RESIDENCE=8, BIRTH_DATE=9, BIRTH_LOCAL=10, PARENTS=11, CIVIL_STATE=12, 
		SPOUSE=13, CHILDREN=14, PROFESSION=15, PROFESSION_LOCAL=16, QUALIFICATIONS=17, 
		PARENT_FATHER=18, PARENT_MOTHER=19, CHILD=20, DESTINATION=21, COUNTRY_AND_CITY=22, 
		DEPARTURE=23, DEFINED_BY=24, GROUP_START=25, GROUP_END=26, LIST_START=27, 
		LIST_END=28, ASP=29, SEPARATOR=30, HYPHEN=31, CIVIL_STATE_DEF=32, ESCAPECHARS=33, 
		ACCENTCHAR=34, SYMBOLS=35, LETTERS=36, NUM=37, WS=38, SL_COMMENT=39, ML_COMMENT=40, 
		SPACE=41;
	public static final String[] tokenNames = {
		"<INVALID>", "PROCESS", "YEAR", "PROCESS_NUMBER", "CITY_COUNCIL", "PERSON", 
		"NAME", "IDENT_CARD", "RESIDENCE", "BIRTH_DATE", "BIRTH_LOCAL", "PARENTS", 
		"CIVIL_STATE", "SPOUSE", "CHILDREN", "PROFESSION", "PROFESSION_LOCAL", 
		"QUALIFICATIONS", "PARENT_FATHER", "PARENT_MOTHER", "CHILD", "DESTINATION", 
		"COUNTRY_AND_CITY", "DEPARTURE", "DEFINED_BY", "'{'", "'}'", "'['", "']'", 
		"'\"'", "','", "'-'", "CIVIL_STATE_DEF", "ESCAPECHARS", "ACCENTCHAR", 
		"SYMBOLS", "LETTERS", "NUM", "WS", "SL_COMMENT", "ML_COMMENT", "' '"
	};
	public static final int
		RULE_passports = 0, RULE_passport = 1, RULE_process = 2, RULE_year = 3, 
		RULE_processNumber = 4, RULE_cityCouncil = 5, RULE_person = 6, RULE_name = 7, 
		RULE_identCard = 8, RULE_residence = 9, RULE_birthDate = 10, RULE_birthLocal = 11, 
		RULE_parents = 12, RULE_parentFather = 13, RULE_parentMother = 14, RULE_civilState = 15, 
		RULE_spouse = 16, RULE_children = 17, RULE_child = 18, RULE_profession = 19, 
		RULE_professionLocal = 20, RULE_qualifications = 21, RULE_destination = 22, 
		RULE_countryAndCity = 23, RULE_departure = 24, RULE_ident_card_def = 25, 
		RULE_process_number_def = 26, RULE_city_council_def = 27, RULE_complete_name_def = 28, 
		RULE_profession_def = 29, RULE_qualifications_def = 30, RULE_local_def = 31, 
		RULE_date_def = 32, RULE_numbers = 33;
	public static final String[] ruleNames = {
		"passports", "passport", "process", "year", "processNumber", "cityCouncil", 
		"person", "name", "identCard", "residence", "birthDate", "birthLocal", 
		"parents", "parentFather", "parentMother", "civilState", "spouse", "children", 
		"child", "profession", "professionLocal", "qualifications", "destination", 
		"countryAndCity", "departure", "ident_card_def", "process_number_def", 
		"city_council_def", "complete_name_def", "profession_def", "qualifications_def", 
		"local_def", "date_def", "numbers"
	};

	@Override
	public String getGrammarFileName() { return "Passport.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PassportParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PassportsContext extends ParserRuleContext {
		public Semantic inS;
		public Semantic outS;
		public PassportContext passport(int i) {
			return getRuleContext(PassportContext.class,i);
		}
		public TerminalNode SEPARATOR(int i) {
			return getToken(PassportParser.SEPARATOR, i);
		}
		public List<PassportContext> passport() {
			return getRuleContexts(PassportContext.class);
		}
		public List<TerminalNode> SEPARATOR() { return getTokens(PassportParser.SEPARATOR); }
		public TerminalNode LIST_START() { return getToken(PassportParser.LIST_START, 0); }
		public TerminalNode LIST_END() { return getToken(PassportParser.LIST_END, 0); }
		public PassportsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public PassportsContext(ParserRuleContext parent, int invokingState, Semantic inS) {
			super(parent, invokingState);
			this.inS = inS;
		}
		@Override public int getRuleIndex() { return RULE_passports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PassportListener ) ((PassportListener)listener).enterPassports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PassportListener ) ((PassportListener)listener).exitPassports(this);
		}
	}

	public final PassportsContext passports(Semantic inS) throws RecognitionException {
		PassportsContext _localctx = new PassportsContext(_ctx, getState(), inS);
		enterRule(_localctx, 0, RULE_passports);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(68); match(LIST_START);
			setState(74);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(69); passport();
					setState(70); match(SEPARATOR);
					}
					} 
				}
				setState(76);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(77); passport();
			setState(78); match(LIST_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PassportContext extends ParserRuleContext {
		public TerminalNode SEPARATOR(int i) {
			return getToken(PassportParser.SEPARATOR, i);
		}
		public ProcessContext process() {
			return getRuleContext(ProcessContext.class,0);
		}
		public TerminalNode GROUP_END() { return getToken(PassportParser.GROUP_END, 0); }
		public List<TerminalNode> SEPARATOR() { return getTokens(PassportParser.SEPARATOR); }
		public PersonContext person() {
			return getRuleContext(PersonContext.class,0);
		}
		public TerminalNode GROUP_START() { return getToken(PassportParser.GROUP_START, 0); }
		public DestinationContext destination() {
			return getRuleContext(DestinationContext.class,0);
		}
		public PassportContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_passport; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PassportListener ) ((PassportListener)listener).enterPassport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PassportListener ) ((PassportListener)listener).exitPassport(this);
		}
	}

	public final PassportContext passport() throws RecognitionException {
		PassportContext _localctx = new PassportContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_passport);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80); match(GROUP_START);
			setState(81); process();
			setState(82); match(SEPARATOR);
			setState(83); person();
			setState(84); match(SEPARATOR);
			setState(85); destination();
			setState(86); match(GROUP_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcessContext extends ParserRuleContext {
		public TerminalNode PROCESS() { return getToken(PassportParser.PROCESS, 0); }
		public TerminalNode SEPARATOR(int i) {
			return getToken(PassportParser.SEPARATOR, i);
		}
		public TerminalNode DEFINED_BY() { return getToken(PassportParser.DEFINED_BY, 0); }
		public TerminalNode GROUP_END() { return getToken(PassportParser.GROUP_END, 0); }
		public ProcessNumberContext processNumber() {
			return getRuleContext(ProcessNumberContext.class,0);
		}
		public CityCouncilContext cityCouncil() {
			return getRuleContext(CityCouncilContext.class,0);
		}
		public List<TerminalNode> SEPARATOR() { return getTokens(PassportParser.SEPARATOR); }
		public YearContext year() {
			return getRuleContext(YearContext.class,0);
		}
		public TerminalNode GROUP_START() { return getToken(PassportParser.GROUP_START, 0); }
		public ProcessContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_process; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PassportListener ) ((PassportListener)listener).enterProcess(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PassportListener ) ((PassportListener)listener).exitProcess(this);
		}
	}

	public final ProcessContext process() throws RecognitionException {
		ProcessContext _localctx = new ProcessContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_process);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88); match(PROCESS);
			setState(89); match(DEFINED_BY);
			setState(90); match(GROUP_START);
			setState(91); year();
			setState(92); match(SEPARATOR);
			setState(93); processNumber();
			setState(94); match(SEPARATOR);
			setState(95); cityCouncil();
			setState(96); match(GROUP_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class YearContext extends ParserRuleContext {
		public TerminalNode YEAR() { return getToken(PassportParser.YEAR, 0); }
		public TerminalNode DEFINED_BY() { return getToken(PassportParser.DEFINED_BY, 0); }
		public NumbersContext numbers() {
			return getRuleContext(NumbersContext.class,0);
		}
		public YearContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_year; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PassportListener ) ((PassportListener)listener).enterYear(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PassportListener ) ((PassportListener)listener).exitYear(this);
		}
	}

	public final YearContext year() throws RecognitionException {
		YearContext _localctx = new YearContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_year);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); match(YEAR);
			setState(99); match(DEFINED_BY);
			setState(100); numbers();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcessNumberContext extends ParserRuleContext {
		public TerminalNode DEFINED_BY() { return getToken(PassportParser.DEFINED_BY, 0); }
		public TerminalNode PROCESS_NUMBER() { return getToken(PassportParser.PROCESS_NUMBER, 0); }
		public Process_number_defContext process_number_def() {
			return getRuleContext(Process_number_defContext.class,0);
		}
		public ProcessNumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_processNumber; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PassportListener ) ((PassportListener)listener).enterProcessNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PassportListener ) ((PassportListener)listener).exitProcessNumber(this);
		}
	}

	public final ProcessNumberContext processNumber() throws RecognitionException {
		ProcessNumberContext _localctx = new ProcessNumberContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_processNumber);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); match(PROCESS_NUMBER);
			setState(103); match(DEFINED_BY);
			setState(104); process_number_def();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CityCouncilContext extends ParserRuleContext {
		public City_council_defContext city_council_def() {
			return getRuleContext(City_council_defContext.class,0);
		}
		public TerminalNode DEFINED_BY() { return getToken(PassportParser.DEFINED_BY, 0); }
		public TerminalNode CITY_COUNCIL() { return getToken(PassportParser.CITY_COUNCIL, 0); }
		public CityCouncilContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cityCouncil; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PassportListener ) ((PassportListener)listener).enterCityCouncil(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PassportListener ) ((PassportListener)listener).exitCityCouncil(this);
		}
	}

	public final CityCouncilContext cityCouncil() throws RecognitionException {
		CityCouncilContext _localctx = new CityCouncilContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_cityCouncil);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); match(CITY_COUNCIL);
			setState(107); match(DEFINED_BY);
			setState(108); city_council_def();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PersonContext extends ParserRuleContext {
		public QualificationsContext qualifications() {
			return getRuleContext(QualificationsContext.class,0);
		}
		public TerminalNode PERSON() { return getToken(PassportParser.PERSON, 0); }
		public TerminalNode SEPARATOR(int i) {
			return getToken(PassportParser.SEPARATOR, i);
		}
		public List<TerminalNode> SEPARATOR() { return getTokens(PassportParser.SEPARATOR); }
		public ChildrenContext children() {
			return getRuleContext(ChildrenContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode DEFINED_BY() { return getToken(PassportParser.DEFINED_BY, 0); }
		public ParentsContext parents() {
			return getRuleContext(ParentsContext.class,0);
		}
		public IdentCardContext identCard() {
			return getRuleContext(IdentCardContext.class,0);
		}
		public SpouseContext spouse() {
			return getRuleContext(SpouseContext.class,0);
		}
		public ResidenceContext residence() {
			return getRuleContext(ResidenceContext.class,0);
		}
		public TerminalNode GROUP_END() { return getToken(PassportParser.GROUP_END, 0); }
		public BirthLocalContext birthLocal() {
			return getRuleContext(BirthLocalContext.class,0);
		}
		public ProfessionContext profession() {
			return getRuleContext(ProfessionContext.class,0);
		}
		public BirthDateContext birthDate() {
			return getRuleContext(BirthDateContext.class,0);
		}
		public ProfessionLocalContext professionLocal() {
			return getRuleContext(ProfessionLocalContext.class,0);
		}
		public CivilStateContext civilState() {
			return getRuleContext(CivilStateContext.class,0);
		}
		public TerminalNode GROUP_START() { return getToken(PassportParser.GROUP_START, 0); }
		public PersonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_person; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PassportListener ) ((PassportListener)listener).enterPerson(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PassportListener ) ((PassportListener)listener).exitPerson(this);
		}
	}

	public final PersonContext person() throws RecognitionException {
		PersonContext _localctx = new PersonContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_person);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110); match(PERSON);
			setState(111); match(DEFINED_BY);
			setState(112); match(GROUP_START);
			setState(113); name();
			setState(114); match(SEPARATOR);
			setState(115); identCard();
			setState(116); match(SEPARATOR);
			setState(117); residence();
			setState(118); match(SEPARATOR);
			setState(119); birthDate();
			setState(120); match(SEPARATOR);
			setState(121); birthLocal();
			setState(122); match(SEPARATOR);
			setState(123); parents();
			setState(124); match(SEPARATOR);
			setState(125); civilState();
			setState(126); match(SEPARATOR);
			setState(130);
			_la = _input.LA(1);
			if (_la==SPOUSE) {
				{
				setState(127); spouse();
				setState(128); match(SEPARATOR);
				}
			}

			setState(135);
			_la = _input.LA(1);
			if (_la==CHILDREN) {
				{
				setState(132); children();
				setState(133); match(SEPARATOR);
				}
			}

			setState(137); profession();
			setState(138); match(SEPARATOR);
			setState(142);
			_la = _input.LA(1);
			if (_la==PROFESSION_LOCAL) {
				{
				setState(139); professionLocal();
				setState(140); match(SEPARATOR);
				}
			}

			setState(144); qualifications();
			setState(145); match(GROUP_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode DEFINED_BY() { return getToken(PassportParser.DEFINED_BY, 0); }
		public TerminalNode NAME() { return getToken(PassportParser.NAME, 0); }
		public Complete_name_defContext complete_name_def() {
			return getRuleContext(Complete_name_defContext.class,0);
		}
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PassportListener ) ((PassportListener)listener).enterName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PassportListener ) ((PassportListener)listener).exitName(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147); match(NAME);
			setState(148); match(DEFINED_BY);
			setState(149); complete_name_def();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentCardContext extends ParserRuleContext {
		public Ident_card_defContext ident_card_def() {
			return getRuleContext(Ident_card_defContext.class,0);
		}
		public TerminalNode DEFINED_BY() { return getToken(PassportParser.DEFINED_BY, 0); }
		public TerminalNode IDENT_CARD() { return getToken(PassportParser.IDENT_CARD, 0); }
		public IdentCardContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identCard; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PassportListener ) ((PassportListener)listener).enterIdentCard(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PassportListener ) ((PassportListener)listener).exitIdentCard(this);
		}
	}

	public final IdentCardContext identCard() throws RecognitionException {
		IdentCardContext _localctx = new IdentCardContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_identCard);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151); match(IDENT_CARD);
			setState(152); match(DEFINED_BY);
			setState(153); ident_card_def();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
